--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "radium": "^0.18.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-loading-indicator": "^1.0.0",
     "redux": "^3.3.1",
     "whatwg-fetch": "^1.0.0"
   },
